.provarCaches/00Df2000001KKNJEA4/objects/Incap311SC__Console_Layout_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311SC__Expanded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Title__c</fullName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Console Layout Setting</label>
    <pluralLabel>Console Layout Settings</pluralLabel>
</CustomObject>